# Team-Availability-Backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  setup.sql
Team-Availablity-API-Bruno/: bruno.json
Team-Availablity-API-Bruno/Teams/: Create Team.bru  Delete Team.bru  Get Team By ID.bru  Get Team By Name.bru  Update Team.bru
Team-Availablity-API-Bruno/Users/: Create User.bru  Get User By ID.bru  Get User By Name.bru
src/: api.rs  data.rs  error.rs  main.rs  model.rs
