[package]
name = "team-availablity-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
rrule = "0.12.0"
serde = {version = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
sqlx = {version = "0.7.4", features = ["runtime-tokio-native-tls" , "postgres", "chrono" ]}
tokio = {version = "1.37.0", features = ["full"]}
tower-http = {version = "0.5.2", features = ["fs"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
